--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #22254b;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.movie__container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movie{
+  width: 230px;
+  margin: 1rem;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgb(0,0,0,0.1);
+  background-color: #373b69;
+  overflow: hidden;
+  position: relative;
+}
+
+.movie img {
+  max-width: 100%;
+}
+
+.movie__info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.movie__info > h3 {
+  margin: 0;
+}
+
+.movie__info > p {
+  background-color: #22254b;
+  padding: 0.3rem;
+  width: 25px;
+  text-align: center;
+  border-radius: 3px;
+  font-weight: 500;
+}
+
+.red {
+  color: red;
+}
+
+.orange {
+  color: orange;
+}
+
+.green {
+  color: rgb(4, 197, 4);
+}
+
+.movie__overview{
+  padding: 2rem 1rem 1rem ;
+  position: absolute;
+  max-height: 100%;
+  overflow: auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: black;
+  background-color: #fff;
+  transform: translateY(101%);
+  transition: 300ms ease;
+}
+
+.movie:hover .movie__overview{
+  transform: translateY(0%);
+}
+
+header{
+  background-color: #373b69;
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
+}
+
+header > form > input {
+  padding: 0.5rem 1rem;
+  border-radius: 40px;
+  border: none;
+}
+
+header > input:focus{
+  outline: 0px;
 }
